[package]
name = "custom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"
twilight-util = { version = "0.15", features = ["full"] }
twilight-validate = "0.15"

serde_json = "1.0.78"
serde_repr = "0.1.9"
toml = "0.7.3"
serde = { version = "1.0", features = ["rc"] }
tera = "1"

async-trait = "0.1.57"
futures-util = "0.3.19"
tokio = { version = "1.16.1", features = ["fs"] }

mongodb = "2.1.0"
redis = "0.21.6"

tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
hyper = { version = "0.14.20", features = ["full"] }

ed25519-dalek = "1.0.1"
humantime = "2.1.0"
dotenv = "0.15.0"
chrono = "0.4.19"
reqwest = "0.11.9"
regex = "1.5.4"
dashmap = "5.2.0"
hex = "0.4.3"
console = "0.15"