[package]
name = "custom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = { version = "0.15", optional = true }
twilight-model = "0.15"
twilight-http = "0.15"
twilight-util = { version = "0.15", features = ["full"] }
twilight-validate = "0.15"

serde_json = "1.0.78"
serde_repr = "0.1.9"
serde = "1.0.136"

async-trait = "0.1.57"
futures-util = "0.3.19"
tokio = "1.16.1"

mongodb = "2.1.0"
redis = "0.21.6"

tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
hyper = { version = "0.14.20", optional = true }

humantime = "2.1.0"
chrono = "0.4.19"

ed25519-dalek = { version = "1.0.1", optional = true }
dotenv = "0.15.0"
reqwest = "0.11.9"
regex = { version = "1.5.4", optional = true }
dashmap = "5.2.0"
hex = { version = "0.4.3", optional = true }

[features]
all = ["custom-clients", "tasks", "http-interactions", "gateway"]
custom-clients = []
tasks = []
http-interactions = ["dep:hyper", "dep:hex", "dep:ed25519-dalek", "hyper/full"]
gateway = ["dep:regex", "dep:twilight-gateway"]

