[package]
name = "custom"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-gateway = { version = "0.15", optional = true }
twilight-model = "0.15"
twilight-http = "0.15"
twilight-util = { version = "0.15", features = ["full"] }
twilight-validate = "0.15"

serde_urlencoded = { version = "0.7", optional = true }
serde_json = "1.0"
serde_repr = "0.1"
serde = "1.0"

async-trait = "0.1.57"
futures-util = "0.3.19"
tokio = "1.16.1"

mongodb = "2.1.0"
redis = "0.21.6"

tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

humantime = "2.1"
chrono = "0.4"

ed25519-dalek = { version = "1.0", optional = true }
dotenv = "0.15"
reqwest = { version = "0.11" }
regex = { version = "1.5", optional = true }
dashmap = "5.2"
hex = { version = "0.4", optional = true }

warp = { version = "0.3", optional = true }
rusty_paseto = { version = "0.6", features = ["core", "v4_local"], optional = true }
anyhow = { version = "1.0", optional = true }

[features]
all = ["custom-clients", "tasks", "http-interactions", "api", "gateway"]
custom-clients = []
tasks = []
http-interactions = ["dep:warp", "dep:hex", "dep:ed25519-dalek"]
gateway = ["dep:regex", "dep:twilight-gateway"]
api = ["dep:warp", "dep:rusty_paseto", "dep:serde_urlencoded", "dep:anyhow", "reqwest/json"]
