[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.15.0"
twilight-model = { git = "https://github.com/twilight-rs/twilight" }
serde = "1.0.134"
redis = "0.21.5"
twilight-http = { git = "https://github.com/twilight-rs/twilight" }
humantime = "2.1.0"
utils = { path = "../utils" }
dashmap = "5.2.0"
serde_json = "1.0.79"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime"]