[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.9.0"
twilight-model = "0.9.0"
twilight-http = "0.9.0"
tokio = "1.16.1"
dotenv = "0.15.0"
database = { path = "../database" }
futures-util = "0.3.19"