[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = { git = "https://github.com/twilight-rs/twilight" }
twilight-model = { git = "https://github.com/twilight-rs/twilight" }
twilight-http = { git = "https://github.com/twilight-rs/twilight" }
tokio = "1.16.1"
dotenv = "0.15.0"
database = { path = "../database" }
futures-util = "0.3.19"
twilight-util = { git = "https://github.com/twilight-rs/twilight", features = ["full"] }
chrono = "0.4.19"
mongodb = "2.1.0"
reqwest = "0.11.9"
serde_json = "1.0.78"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
serde = "1.0.136"
regex = "1.5.4"
utils = { "path" = "../utils" }
dashmap = "5.2.0"