[package]
name = "custom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.15.0", features = ["full"]  }
database = { path = "../database" }
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
serde_json = "1.0.78"
twilight-model = { git = "https://github.com/twilight-rs/twilight" }
serde = "1.0.136"
futures = "0.3.19"
twilight-http = { git = "https://github.com/twilight-rs/twilight" }
mongodb = "2.1.0"
utils = { path = "../utils" }
humantime = "2.1.0"
chrono = "0.4.19"