[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-http = "0.11"
twilight-model = "0.11"
mongodb = "2.1.0"
redis = "0.21.5"
twilight-validate = "0.11"
humantime = "2.1.0"
serde_json = "1.0.79"